--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^4.1.1",
     "vue": "^3.4.29",
+    "vue-i18n": "^10.0.4",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.56.2",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
