--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
+    "element-plus": "^2.8.4",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^4.1.1",
     "vue": "^3.4.29",
@@ -26,6 +30,8 @@
     "npm-run-all2": "^6.2.0",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
-    "vue-tsc": "^2.0.21"
+    "vite-plugin-windicss": "^1.9.3",
+    "vue-tsc": "^2.0.21",
+    "windicss": "^3.5.6"
   }
 }
