--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "bootstrap": "^5.3.3",
-    "bootstrap-vue": "^2.23.1",
+    "axios": "^1.7.7",
     "element-plus": "^2.8.4",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^4.1.1",
