--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force"
@@ -14,11 +14,15 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.7",
     "element-plus": "^2.8.4",
+    "pdfjs-dist": "^4.10.38",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^4.1.1",
     "vue": "^3.4.29",
     "vue-i18n": "^10.0.4",
-    "vue-router": "^4.3.3"
+    "vue-pdf-embed": "1.1.6",
+    "vue-router": "^4.3.3",
+    "vue3-pdf-app": "^1.0.3",
+    "vue3-pdfjs": "0.1.6"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.56.2",
@@ -26,6 +30,7 @@
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/tsconfig": "^0.5.1",
+    "less": "^4.2.2",
     "npm-run-all2": "^6.2.0",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
