--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force"
   },
+  "eslintConfig": {
+    "extends": "./.eslintrc.ts"
+  },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.7",
