--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "eslintConfig": {
-    "extends": "./.eslintrc.ts"
+    "extends": "./.eslintrc.js"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
@@ -33,6 +33,8 @@
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/tsconfig": "^0.5.1",
+    "eslint": "^9.25.0",
+    "eslint-plugin-vue": "^10.0.0",
     "less": "^4.2.2",
     "npm-run-all2": "^6.2.0",
     "typescript": "~5.4.0",
